@@ -10,6 +10,7 @@
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
 // Copyright (C) 2003 Gary Thomas
+// Copyright (C) 2004 eCosCentric Ltd
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
@@ -52,19 +53,29 @@
 
 #include <pkgconf/hal.h>                // Platform specific configury
 #include <pkgconf/wallclock.h>          // Wallclock device config
+#include <pkgconf/devices_wallclock_dallas_ds1307.h>
 
 #include <cyg/hal/hal_io.h>             // IO macros
 #include <cyg/hal/hal_intr.h>           // interrupt enable/disable
 #include <cyg/infra/cyg_type.h>         // Common type definitions and support
+#include <string.h>                     // memcpy()
 
 #include <cyg/io/wallclock.hxx>         // The WallClock API
 #include <cyg/io/wallclock/wallclock.inl> // Helpers
 
 #include <cyg/infra/diag.h>
 
-//#define DEBUG
+#if 1
+# define DEBUG(_format_, ...)
+#else
+# define DEBUG(_format_, ...) diag_printf(_format_, ## __VA_ARGS__)
+#endif
 
-// Registers
+// Registers.
+// FIXME: there is no need to include the control register here, it
+// controls a square wave output which is independent from the wallclock.
+// However fixing it would require changing any platforms that use the
+// old DS_GET()/DS_PUT() functionality.
 #define DS_SECONDS         0x00
 #define DS_MINUTES         0x01
 #define DS_HOURS           0x02
@@ -76,11 +87,15 @@
 #define DS_REGS_SIZE       0x08   // Size of register space
 
 #define DS_SECONDS_CH      0x80   // Clock Halt
-#define DS_HOURS_24        0x80   // 24 hour clock mode
+#define DS_HOURS_24        0x40   // 24 hour clock mode
 
-//
-// This particular chip is always accessed via I2C (2-wire protocol)
-// The platform needs to provide simple I2C access functions
+// The DS1307 chip is accessed via I2C (2-wire protocol). This can be
+// implemented in one of two ways. If the platform supports the generic
+// I2C API then it should also export a cyg_i2c_device structure
+// cyg_i2c_wallclock_ds1307, and this can be manipulated via the
+// usual cyg_i2c_tx() and cyg_i2c_rx() functions. Alternatively (and
+// primarily for older ports predating the generic I2C package)
+// the platform HAL can provide the following two macros/functions:
 //
 // void DS_GET(cyg_uint8 *regs)
 //    Reads the entire set of registers (8 bytes) into *regs
@@ -91,40 +106,123 @@
 // stable (if the access function manipulates the registers in an
 // single operation)
 //
+// If the platform HAL implements the CDL interface
+// CYGINT_DEVICES_WALLCLOCK_DALLAS_DS1307_I2C then the I2C API will be used.
 
-// Platform details
-#include CYGDAT_DEVS_WALLCLOCK_DALLAS_1307_INL
+#ifdef CYGINT_DEVICES_WALLCLOCK_DALLAS_DS1307_I2C
+# if defined(DS_GET) || defined(DS_PUT)
+#  error The macros DS_GET and DS_PUT should not be defined if the generic I2C API is used
+# endif
+
+#include <cyg/io/i2c.h>
+
+static void
+DS_GET(cyg_uint8* regs)
+{
+    cyg_uint8   tx_data[1];
+    cyg_bool    ok = true;
+
+    tx_data[0]  = 0x00; // Initial register to read
+    cyg_i2c_transaction_begin(&cyg_i2c_wallclock_ds1307);
+    if (1 != cyg_i2c_transaction_tx(&cyg_i2c_wallclock_ds1307, true, tx_data, 1, false)) {
+        // The device has not responded to the address byte.
+        ok = false;
+    } else {
+        // Now fetch the data
+        cyg_i2c_transaction_rx(&cyg_i2c_wallclock_ds1307, true, regs, 8, true, true);
+
+        // Verify that there are reasonable default settings. The
+        // register values can be used as array indices so bogus
+        // values can lead to bus errors or similar problems.
+        
+        // Years: 00 - 99, with 70-99 interpreted as 1970 onwards.
+        if ((regs[DS_YEAR] & 0x0F) > 0x09) {
+            ok = false;
+        }
+        // Month: 1 - 12
+        if ((regs[DS_MONTH] == 0x00) ||
+            ((regs[DS_MONTH] > 0x09) && (regs[DS_MONTH] < 0x10)) ||
+            (regs[DS_MONTH] > 0x12)) {
+            ok = false;
+        }
+        // Day: 1 - 31. This check does not allow for 28-30 day months.
+        if ((regs[DS_DOM] == 0x00) ||
+            ((regs[DS_DOM] & 0x0F) > 0x09) ||
+            (regs[DS_DOM] > 0x31)) {
+            ok = false;
+        }
+        // Hours: 0 - 23. Always run in 24-hour mode
+        if ((0 != (regs[DS_HOURS] & DS_HOURS_24)) ||
+            ((regs[DS_HOURS] & 0x0F) > 0x09) ||
+            ((regs[DS_HOURS] & 0x3F) > 0x023)) {
+            ok = false;
+        }
+        // Ignore the DOW field. The wallclock code does not need it, and
+        // it is hard to calculate.
+        // Minutes: 0 - 59
+        if (((regs[DS_MINUTES] & 0x0F) > 0x09) ||
+            (regs[DS_MINUTES] > 0x59)) {
+            ok = false;
+        }
+        // Seconds: 0 - 59
+        if (((regs[DS_SECONDS] & 0x0F) > 0x09) ||
+            (regs[DS_SECONDS] > 0x59)) {
+            ok = false;
+        }
+    }
+    cyg_i2c_transaction_end(&cyg_i2c_wallclock_ds1307);
+    if (! ok) {
+        // Any problems, return Jan 1 1970 but do not update the hardware.
+        // Leave it to the user or other code to set the clock to a sensible
+        // value.
+        regs[DS_SECONDS]  = 0x00;
+        regs[DS_MINUTES]  = 0x00;
+        regs[DS_HOURS]    = 0x00;
+        regs[DS_DOW]      = 0x00;
+        regs[DS_DOM]      = 0x01;                                                         
+        regs[DS_MONTH]    = 0x01;                                                        
+        regs[DS_YEAR]     = 0x70;
+        regs[DS_CONTROL]  = 0x00;
+    }
+}
+
+static void
+DS_PUT(cyg_uint8* regs)
+{
+    cyg_uint8 tx_data[9];
+    tx_data[0] = 0;
+    memcpy(&(tx_data[1]), regs, 8);
+    cyg_i2c_tx(&cyg_i2c_wallclock_ds1307, tx_data, 9);
+}
+
+#else
+// Platform details. The platform HAL or some other package should
+// provide this header, containing the required macros
+# include CYGDAT_DEVS_WALLCLOCK_DALLAS_1307_INL
+#endif
 
 //----------------------------------------------------------------------------
 // Accessor functions
+
 static inline void
 init_ds_hwclock(void)
 {
     cyg_uint8 regs[DS_REGS_SIZE];
-    
-    // Verify that there are reasonable default settings - otherwise
-    // set them.
 
     // Fetch the current state
     DS_GET(regs);
-
-    if (0x00 == regs[DS_MONTH])
-	regs[DS_MONTH] = TO_BCD(1);
-
-    if (0x00 == regs[DS_DOW])
-	regs[DS_DOW] = TO_BCD(1);
-
-    if (0x00 == regs[DS_DOM])
-	regs[DS_DOM] = TO_BCD(1);
-
-    // Make sure clock is running and in 24 hour mode
-    regs[DS_HOURS] |= DS_HOURS_24;
-    regs[DS_SECONDS] &= ~DS_SECONDS_CH;
-
-    // Update the state
-    DS_PUT(regs);
+    
+    // If the clock is not currently running or is not in 24-hours mode,
+    // update it. Otherwise skip the update because the clock may have
+    // ticked between DS_GET() and DS_PUT() and we could be losing the
+    // occasional second.
+    if ((0 != (regs[DS_HOURS] & DS_HOURS_24)) ||
+        (0 != (regs[DS_SECONDS] & DS_SECONDS_CH))) {
+        regs[DS_SECONDS] &= ~DS_SECONDS_CH;
+        regs[DS_HOURS]   &= ~DS_HOURS_24;
+        DS_PUT(regs);
+    }
 }
-
 
 static inline void
 set_ds_hwclock(cyg_uint32 year, cyg_uint32 month, cyg_uint32 mday,
@@ -133,28 +231,30 @@ set_ds_hwclock(cyg_uint32 year, cyg_uint32 month, cyg_uint32 mday,
     cyg_uint8 regs[DS_REGS_SIZE];
 
     // Set up the registers
-    regs[DS_YEAR] = TO_BCD((cyg_uint8)(year % 100));
-    regs[DS_MONTH] = TO_BCD((cyg_uint8)month);
-    regs[DS_DOM] = TO_BCD((cyg_uint8)mday);
-    regs[DS_HOURS] = TO_BCD((cyg_uint8)hour) | DS_HOURS_24;
-    regs[DS_MINUTES] = TO_BCD((cyg_uint8)minute);
+    regs[DS_CONTROL]    = 0x00;
+    regs[DS_YEAR]       = TO_BCD((cyg_uint8)(year % 100));
+    regs[DS_MONTH]      = TO_BCD((cyg_uint8)month);
+    regs[DS_DOM]        = TO_BCD((cyg_uint8)mday);
+    regs[DS_DOW]        = TO_BCD(0x01);     // Not accurate, but not used by this driver either
+    regs[DS_HOURS]      = TO_BCD((cyg_uint8)hour);
+    regs[DS_MINUTES]    = TO_BCD((cyg_uint8)minute);
     // This also starts the clock
-    regs[DS_SECONDS] = TO_BCD((cyg_uint8)second);
+    regs[DS_SECONDS]    = TO_BCD((cyg_uint8)second);
 
     // Send the register set to the hardware
     DS_PUT(regs);
 
-#ifdef DEBUG
-    // This will cause the test to eventually fail due to these printouts
-    // causing timer interrupts to be lost...
-    diag_printf("Set -------------\n");
-    diag_printf("year %02d\n", year);
-    diag_printf("month %02d\n", month);
-    diag_printf("mday %02d\n", mday);
-    diag_printf("hour %02d\n", hour);
-    diag_printf("minute %02d\n", minute);
-    diag_printf("second %02d\n", second);
-#endif
+    // These debugs will cause the test to eventually fail due to
+    // the printouts causing timer interrupts to be lost...
+    DEBUG("DS1307 set -------------\n");
+    DEBUG("regs %02x %02x %02x %02x %02x %02x %02x %02x\n",
+          regs[0], regs[1], regs[2], regs[3], regs[4], regs[5], regs[6], regs[7]);
+    DEBUG("year %02d\n", year);
+    DEBUG("month %02d\n", month);
+    DEBUG("mday %02d\n", mday);
+    DEBUG("hour %02d\n", hour);
+    DEBUG("minute %02d\n", minute);
+    DEBUG("second %02d\n", second);
 }
 
 static inline void
@@ -168,27 +268,28 @@ get_ds_hwclock(cyg_uint32* year, cyg_uint32* month, cyg_uint32* mday,
 
     *year = (cyg_uint32)TO_DEC(regs[DS_YEAR]);
     // The year field only has the 2 least significant digits :-(
-    if (*year >= 34) {
+    if (*year >= 70) {
         *year += 1900;
     } else {
         *year += 2000;
     }
     *month = (cyg_uint32)TO_DEC(regs[DS_MONTH]);
     *mday = (cyg_uint32)TO_DEC(regs[DS_DOM]);
-    *hour = (cyg_uint32)TO_DEC(regs[DS_HOURS] & 0x7F);
+    *hour = (cyg_uint32)TO_DEC(regs[DS_HOURS] & 0x3F);
     *minute = (cyg_uint32)TO_DEC(regs[DS_MINUTES]);
     *second = (cyg_uint32)TO_DEC(regs[DS_SECONDS] & 0x7F);
 
-#ifdef DEBUG
-    // This will cause the test to eventually fail due to these printouts
-    // causing timer interrupts to be lost...
-    diag_printf("year %02d\n", *year);
-    diag_printf("month %02d\n", *month);
-    diag_printf("mday %02d\n", *mday);
-    diag_printf("hour %02d\n", *hour);
-    diag_printf("minute %02d\n", *minute);
-    diag_printf("second %02d\n", *second);
-#endif
+    // These debugs will cause the test to eventually fail due to
+    // the printouts causing timer interrupts to be lost...
+    DEBUG("DS1307 get -------------\n");
+    DEBUG("regs %02x %02x %02x %02x %02x %02x %02x %02x\n",
+          regs[0], regs[1], regs[2], regs[3], regs[4], regs[5], regs[6], regs[7]);
+    DEBUG("year %02d\n", *year);
+    DEBUG("month %02d\n", *month);
+    DEBUG("mday %02d\n", *mday);
+    DEBUG("hour %02d\n", *hour);
+    DEBUG("minute %02d\n", *minute);
+    DEBUG("second %02d\n", *second);
 }
 
 //-----------------------------------------------------------------------------
